--var-white fix, footer icons, mobile align fix

--- a/css/grid.css
+++ b/css/grid.css
@@ -63,9 +63,15 @@ main { flex: 5; }
 .header div:first-child { flex: 3; }
 .header div:nth-child(2) { flex: 2; }
 
-.header span img { padding-left: 10px; max-height: 14px; }
+.header span img,
+footer img { max-height: 14px; }
 
-.header-item span { display: block; }
+.header span img:nth-child(3) { padding-left: 10px; }
+
+.header-item span {
+  display: block;
+  text-align: center;
+}
 
 .header-item:first-child span:first-child { font-size: 20px; }
 
