--- a/css/style.css
+++ b/css/style.css
@@ -7,7 +7,6 @@ img { transition: .15s; }
   --color-red: #ff5d30;
   --color-orange: #ff992d;
   --color-yellow: #efb03b;
-  --color-white: #fff;
   --color-gray: #9E9E9E;
   --color-green: #00e04d;
 }
@@ -16,7 +15,7 @@ body {
   font-family: 'PT Sans', sans-serif;
   font-size: 16px;
   background-color: #fff;
-  background: url(../img/gc-icons2.png) center top repeat;
+  background: url(../img/gc-icons.png) center top repeat;
   color: var(--color-black);
 }
 
@@ -29,7 +28,7 @@ a {
 .dark { background: var(--color-orange); }
 
 .light,
-.dark { color: var(--color-white); }
+.dark { color: #fff; }
 
 .accent-link {
   font-size: 18px;
@@ -42,7 +41,7 @@ a {
   -webkit-box-shadow: 0px 0px 100px 0px rgba(0,0,0,0.5);
   -moz-box-shadow: 0px 0px 100px 0px rgba(0,0,0,0.5);
   box-shadow: 0px 0px 100px 0px rgba(0,0,0,0.5);
-  background: var(--color-white);
+  background: #fff;
 }
 
 .logo a:hover { -webkit-filter: hue-rotate(90deg); }
@@ -66,7 +65,7 @@ a {
 .pagination a:hover { color: #747880; }
 
 .first-sidebar-item {
-  color: var(--color-white);
+  color: #fff;
   font-weight: bold;
 }
 
@@ -90,7 +89,7 @@ a {
 .addtocart:hover { background-color: var(--color-red); }
 .addtocart:active { background-color: var(--color-orange); }
 
-footer { background-color: var(--color-white); }
+footer { background-color: #fff; }
 
 .header span a:hover,
 .header p:hover,
